--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,8 @@ button:focus-visible {
   border: 1px solid #eee;
   border-radius: 5px ;
   font-size: 40px;
+  cursor: pointer;
+  user-select: none;
 }
 
 .turn{
@@ -82,6 +84,10 @@ button:focus-visible {
   gap: 20px;
   justify-content: center;
   margin-top: 20px;
+}
+
+.turn >* {
+  border: none;
 }
 
 .isTurn{
